--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "mongodb": "^6.17.0",
     "mongoose": "^8.15.2",
     "morgan": "~1.9.1",
-    "nodemon": "^3.1.10"
+    "nodemon": "^3.1.10",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.1"
   }
 }
