--- a/package.json
+++ b/package.json
@@ -1,11 +1,16 @@
 {
   "name": "notas-api",
-  "version": "0.0.0",
+  "version": "1.0.0",
   "private": true,
   "type": "module",
+  "engines": {
+    "node": ">=18.0.0",
+    "npm": ">=8.0.0"
+  },
   "scripts": {
     "start": "node app.js",
-    "dev": "nodemon app.js"
+    "dev": "nodemon app.js",
+    "build": "echo 'No build step required'"
   },
   "dependencies": {
     "bcrypt": "^6.0.0",
@@ -17,8 +22,10 @@
     "mongodb": "^6.17.0",
     "mongoose": "^8.15.2",
     "morgan": "~1.9.1",
-    "nodemon": "^3.1.10",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.1"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.10"
   }
 }
